--- a/debian/rules
+++ b/debian/rules
@@ -8,7 +8,7 @@
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
-export PYBUILD_NAME=langid
+export PYBUILD_NAME=py3langid
 
 %:
 	dh $@ --with python3 --buildsystem pybuild
